[gd_scene load_steps=2 format=3 uid="uid://cds0cpgte4hr4"]

[ext_resource type="Script" uid="uid://cp1qneahm7ot1" path="res://Scenes/Screens/HangmanScreen.gd" id="1_bfdro"]

[node name="HangmanScreen" type="Node2D"]
script = ExtResource("1_bfdro")

[node name="GameLayer" type="CanvasLayer" parent="."]

[node name="BackgroundColor" type="ColorRect" parent="GameLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameContainer" type="Control" parent="GameLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
